--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
     "next": "12.0.4",
+    "radium": "^0.26.1",
     "react": "17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
